--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "django>=5.2.7",
     "django-cors-headers>=4.9.0",
+    "djangorestframework>=3.16.1",
+    "psycopg[binary]>=3.2.10",
     "requests>=2.32.5",
 ]
