--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 RUN pip install --no-cache-dir uv
 COPY pyproject.toml uv.lock ./
-RUN uv export --format requirements.txt --no-hashes | pip install -no-cache-dir -r /dev/stdin
+RUN uv export --format requirements.txt --no-hashes | pip install --no-cache-dir -r /dev/stdin
 
 COPY . .
 
