--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,3 +12,9 @@ dependencies = [
     "psycopg[binary]>=3.2.10",
     "requests>=2.32.5",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-django>=4.11.1",
+]
