--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: CI
 
 on:
   push:
@@ -57,3 +57,29 @@ jobs:
       run: |
         cd backend
         pytest -v
+
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install uv
+        cd backend
+        uv export --format requirements.txt --no-hashes | pip install --no-cache-dir -r /dev/stdin
+
+    - name: Check Black
+      run: |
+        black --check backend
+
+    - name: Check isort
+      run: |
+        isort --check-only backend
+
+    - name: Check flake8
+      run: |
+        flake8 backend
