--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,14 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "black>=25.9.0",
+    "flake8>=7.3.0",
+    "isort>=7.0.0",
+    "pre-commit>=4.3.0",
     "pytest>=8.4.2",
     "pytest-django>=4.11.1",
 ]
+
+[tool.black]
+line-length = 120
+target-version = ["py312"]
