--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "django>=5.2.7",
     "django-cors-headers>=4.9.0",
     "djangorestframework>=3.16.1",
+    "gunicorn>=23.0.0",
     "numpy>=2.3.3",
     "psycopg[binary]>=3.2.10",
     "requests>=2.32.5",
