feat: remove prod docker compose and clean settings and env vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - /app/.venv
     env_file:
       - .env
+    environment:
+      DJANGO_SETTINGS_MODULE: core.dev
     depends_on:
       - db
     ports:
