--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,12 +1,9 @@
 server {
-    listen 443 ssl;
+    listen 80;
     server_name _;
 
     root /usr/share/nginx/html;
     index index.html;
-
-    ssl_certificate /etc/ssl/cert.pem;
-    ssl_certificate_key /etc/ssl/key.pem;
 
     add_header X-Content-Type-Options nosniff;
     add_header X-Frame-Options DENY;
@@ -20,15 +17,6 @@ server {
     frame-src https://*.scdn.co;
     frame-ancestors 'none';
     base-uri 'self';" always;
-
-    # Proxy API calls to Django
-    location /api/ {
-        proxy_pass http://backend:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
 
     # Serve React
     location / {
