--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install uv
         cd backend
+        export DJANGO_SETTINGS_MODULE=core.dev
         uv export --format requirements.txt --no-hashes | pip install --no-cache-dir -r /dev/stdin
 
     - name: Run migrations
