--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: tag-and-build
-    if : ${{ github.ref_name == 'prod' }}
+    if: ${{ github.ref_name == 'prod' }}
     steps:
       - name: Checkout infra repo
         uses: actions/checkout@v4
@@ -55,7 +55,14 @@ jobs:
           token: ${{ secrets.DEPLOY_PAT }}
 
       - name: Update infra
-        run: ./scripts/deploy.sh
         env:
-          VERSION: ${{ needs.build.outputs.version }}
-          CI_BRANCH: ${{ github.ref_name }}
+          VERSION: ${{ needs.tag-and-build.outputs.version }}
+        run: |
+          sed -i "s/appVersion: .*/appVersion: $VERSION/" helm/values.yaml
+          sed -i "s/appVersion: .*/appVersion: $VERSION/" helm/Chart.yaml
+          git add .
+
+          git config user.email "actions@github.com"
+          git config user.name "GitHub Actions"
+          git commit -m "chore: update Docker images to $VERSION on prod"
+          git push origin main
