--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: tag-and-build
-    if: ${{ github.ref_name == 'prod' }}
+    env:
+      CI_BRANCH: ${{ github.ref_name }}
     steps:
       - name: Checkout infra repo
         uses: actions/checkout@v4
@@ -58,8 +59,12 @@ jobs:
         env:
           VERSION: ${{ needs.tag-and-build.outputs.version }}
         run: |
-          sed -i "s/appVersion: .*/appVersion: $VERSION/" helm/values.yaml
-          sed -i "s/appVersion: .*/appVersion: $VERSION/" helm/Chart.yaml
+          sed -i "s/appVersion: .*/appVersion: $VERSION/" helm/values-staging.yaml
+          if [ "$CI_BRANCH" = "prod" ]; then
+            sed -i "s/appVersion: .*/appVersion: $VERSION/" helm/Chart.yaml
+            sed -i "s/appVersion: .*/appVersion: $VERSION/" helm/values-prod.yaml
+          fi
+
           git add .
 
           git config user.email "actions@github.com"
