--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "gunicorn>=23.0.0",
     "numpy>=2.3.3",
     "psycopg[binary]>=3.2.10",
+    "python-json-logger>=4.0.0",
     "requests>=2.32.5",
 ]
 
