--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
+ENV DJANGO_SETTINGS_MODULE=core.prod
 RUN pip install --no-cache-dir uv
 COPY pyproject.toml uv.lock ./
 RUN uv export --format requirements.txt --no-hashes | pip install --no-cache-dir -r /dev/stdin
