--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "psycopg[binary]>=3.2.10",
     "python-json-logger>=4.0.0",
     "requests>=2.32.5",
+    "sentry-sdk[django]>=2.44.0",
 ]
 
 [dependency-groups]
