--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,11 +7,13 @@ requires-python = ">=3.12"
 dependencies = [
     "django>=5.2.7",
     "django-cors-headers>=4.9.0",
+    "django-redis>=6.0.0",
     "djangorestframework>=3.16.1",
     "gunicorn>=23.0.0",
     "numpy>=2.3.3",
     "psycopg[binary]>=3.2.10",
     "python-json-logger>=4.0.0",
+    "redis>=7.0.1",
     "requests>=2.32.5",
     "sentry-sdk[django]>=2.44.0",
 ]
