--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "channels>=4.3.1",
+    "channels-redis>=4.3.0",
+    "daphne>=4.2.1",
     "django>=5.2.7",
     "django-cors-headers>=4.9.0",
     "django-redis>=6.0.0",
