--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "redis>=7.0.1",
     "requests>=2.32.5",
     "sentry-sdk[django]>=2.44.0",
-    "uvicorn>=0.38.0",
+    "uvicorn[standard]>=0.38.0",
 ]
 
 [dependency-groups]
