test: fix tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,15 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 5s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
 
     steps:
     - name: Checkout code
@@ -45,7 +54,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install uv
         cd backend
-        export DJANGO_SETTINGS_MODULE=core.dev
         uv export --format requirements.txt --no-hashes | pip install --no-cache-dir -r /dev/stdin
 
     - name: Run migrations
