fix: allow spotify media-src in CSP

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,6 +12,7 @@ server {
     script-src 'self' https://*.scdn.co;
     style-src 'self';
     img-src 'self' https://*.scdn.co data:;
+    media-src 'self' https://p.scdn.co;
     font-src 'self' data:;
     connect-src 'self' https://api.spotify.com;
     frame-src https://*.scdn.co;
